@@ -1,5 +1,9 @@
 2022-04-28  Bart Schaefer  <schaefer@zsh.org>
 
+	* 50133 (Bart, PWS, Jun-ichi): Src/input.c, configure.ac: when
+	lseek(2) is available, use it to check for and rewind read-ahead
+	for more efficient line-buffered input.
+
 	* 50126: Etc/BUGS, Src/exec.c: Fix multios in current-shell "exec"
 
 	* 50101: Src/Modules/system.c: sysread -o with param matches doc
